# paper-darkmode-converter

./: .gitignore  README.md  model.py  paper_darkmode_converter.py  pyproject.toml
